# infrix-crates

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
accumen-macros/: Cargo.toml
accumen-macros/src/: lib.rs
accumen-sdk/: Cargo.toml
accumen-sdk/src/: lib.rs
accumen-types/: Cargo.toml
accumen-types/src/: lib.rs
infrix-macros/: Cargo.toml
infrix-macros/src/: governance_macros.rs  lib.rs  shapes.rs
infrix-macros/tests/: shapes_macro.rs  trybuild.rs
infrix-macros/tests/trybuild/: bad_rule_target.rs  bad_rule_target.stderr  duplicate_shape.rs  duplicate_shape.stderr  invalid_param_type.rs  invalid_param_type.stderr  missing_default.rs  missing_default.stderr  schema_mismatch.rs  schema_mismatch.stderr
infrix-sdk/: Cargo.toml
infrix-sdk/src/: governance.rs  lib.rs  mission.rs  sentient.rs  shadow.rs  shapes.rs  swarm.rs  temporal.rs  testing.rs
infrix-types/: Cargo.toml
infrix-types/src/: governance.rs  lib.rs
tools/sdkgen/: go.mod  main.go  sdkgen.go  sdkgen_test.go
