[workspace]
resolver = "2"
members = [
    "infrix-types",
    "infrix-macros",
    "infrix-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AccumulateNetwork/infrix"

[workspace.dependencies]
infrix-types = { path = "infrix-types" }
infrix-macros = { path = "infrix-macros" }
infrix-sdk = { path = "infrix-sdk" }
