[workspace]
resolver = "2"
members = [
    "infrix-types",
    "infrix-macros",
    "infrix-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AccumulateNetwork/infrix"

[workspace.dependencies]
infrix-types = { path = "infrix-types" }
infrix-macros = { path = "infrix-macros" }
infrix-sdk = { path = "infrix-sdk" }

# AUDIT_FINDINGS_2026-05-21 #17 closure: the warning set is zero after the
# wire-or-delete sweep; lock it in by promoting warnings to errors at the
# workspace level so any regression fails CI rather than accumulating.
[workspace.lints.rust]
warnings = "deny"
