[package]
name = "accumen-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SDK for developing Accumen smart contracts"
repository = "https://github.com/AccumulateNetwork/accumen"
keywords = ["accumulate", "smart-contracts", "wasm", "blockchain"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["accumen-types/std"]
alloc = ["accumen-types/alloc"]

[dependencies]
accumen-types = { path = "../accumen-types" }
accumen-macros = { path = "../accumen-macros" }

[dev-dependencies]
