[package]
name = "infrix-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Procedural macros for Infrix smart contracts"
repository = "https://github.com/AccumulateNetwork/infrix"
keywords = ["accumulate", "smart-contracts", "wasm", "blockchain", "macros"]
categories = ["cryptography", "wasm", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
infrix-types = { path = "../infrix-types" }
trybuild = "1.0"
