[package]
name = "infrix-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Procedural macros for Infrix smart contracts"
repository = "https://github.com/AccumulateNetwork/infrix"
keywords = ["accumulate", "smart-contracts", "wasm", "blockchain", "macros"]
categories = ["cryptography", "wasm", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
# AUDIT_RECHECK_2026-05-22_ROUND2 P1 closure: path-only dependencies
# trigger a `cargo publish --dry-run` warning even when the dep is a
# dev-dependency. Pin the registry version alongside the path.
infrix-types = { path = "../infrix-types", version = "0.1.0" }
trybuild = "1.0"
