[package]
name = "infrix-types"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core types for Infrix smart contracts"
repository = "https://github.com/AccumulateNetwork/infrix"
keywords = ["accumulate", "smart-contracts", "wasm", "blockchain"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
# No external dependencies for no_std compatibility
